[package]
name = "x402-sdk-solana-rust"
version = "0.1.0"
edition = "2021"
authors = ["zhiming817<zhiming817@gmail.com>"]
description = "Rust SDK for X402 payment protocol on Solana - enabling pay-per-use APIs with automatic payment handling"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zhiming817/x402-sdk-solana-rust"
homepage = "https://github.com/zhiming817/x402-sdk-solana-rust"
documentation = "https://docs.rs/x402-sdk-solana-rust"
readme = "README.md"
keywords = ["solana", "payment", "x402", "blockchain", "api"]
categories = ["cryptography::cryptocurrencies", "api-bindings", "web-programming"]

[dependencies]
solana-client = "1.10.32"
solana-sdk = "1.10.32"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
bs58 = "0.5"
actix-web = "4"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
thiserror = "1.0"
bincode = "1.3"
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"