[package]
name = "x402-sdk-solana-rust"
version = "0.1.4"
edition = "2021"
authors = ["zhiming817<zhiming817@gmail.com>"]
description = "Rust SDK for X402 payment protocol on Solana - enabling pay-per-use APIs with automatic payment handling"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zhiming817/x402-sdk-solana-rust"
homepage = "https://github.com/zhiming817/x402-sdk-solana-rust"
documentation = "https://docs.rs/x402-sdk-solana-rust"
readme = "README.md"
keywords = ["solana", "payment", "x402", "blockchain", "api"]
categories = ["cryptography::cryptocurrencies", "api-bindings", "web-programming"]

[dependencies]
# Solana 依赖 - 升级到 3.0.0 版本
solana-client = "3.0"
solana-sdk = "3.0"
solana-system-program = "3.0"
solana-system-interface = { version = "3.0", features = ["bincode"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
bs58 = "0.5"
actix-web = "4"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
bincode = "1.3"
futures-util = "0.3"
# SPL Token 支持 - 升级到 9.0 (与 Solana 3.0 兼容)
spl-token = "9.0"
spl-associated-token-account = "8.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"